--- a/accounts/templates/accounts/stats.html
+++ b/accounts/templates/accounts/stats.html
@@ -4,24 +4,33 @@
   <div class="container mb-3">
     <div class="row mt-3">
       <div class="mx-auto mb-4">
-        <b>Historial de actividades</b>
+        <b>Scan History</b>
         <hr />
+        <div class="alert alert-success">
+          <h5>Total CO2 saved: {{ viewData.total_co2|floatformat:3 }} kg</h5>
+        </div>
         <table class="table table-bordered table-center">
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">Tipo de actividad</th>
-              <th scope="col">Puntos acumulados</th>
-              <th scope="col">Fecha</th>
+              <th scope="col">Waste Type</th>
+              <th scope="col">Assigned Bin</th>
+              <th scope="col">CO2 Saved</th>
+              <th scope="col">Date</th>
             </tr>
           </thead>
           <tbody>
-            {% for entry in viewData.user_history_entries %}
+            {% for entry in viewData.scanning_entries %}
             <tr>
               <th scope="row">{{ forloop.counter }}</th>
-              <td>Escaneo de QR</td>
-              <td><span class="fw-bold text-success">{{ entry.accumulated_points }}</span></td>
-              <td>{{ entry.created_at|date:"Y-m-d" }}</td>
+              <td>{{ entry.get_waste_type_display }}</td>
+              <td>
+                <span class="badge {% if entry.bin_type == 'BLACK' %}bg-dark{% elif entry.bin_type == 'GREEN' %}bg-success{% else %}bg-light text-dark{% endif %}">
+                  {{ entry.get_bin_type_display }}
+                </span>
+              </td>
+              <td>{{ entry.co2_saved|floatformat:3 }} kg</td>
+              <td>{{ entry.scan_date|date:"Y-m-d H:i" }}</td>
             </tr>
             {% endfor %}
           </tbody>
