--- a/image_processing/templates/image_processing/scanner.html
+++ b/image_processing/templates/image_processing/scanner.html
@@ -10,51 +10,36 @@
   Your browser does not support the audio element.
 </audio>
 
-
-<div class="row text-center">
-  <div class="col-12 mx-auto">
-      <div class="pt-2 learn-top-green">
-        <div class="container">
-          <div class="row align-items-center p-3">
-            <div class="col-12 col-sm-5 col-md-5 text-white mb-4 mb-sm-0">
-              <b class="title-level text-start text-white text-main-camera rc-no-a">ESCANEA TUS RESIDUOS</b>
-            </div>
-            <div class="col-12 col-sm-7 col-md-7">
-              <img src="{% static 'images/scanner/top-info.png' %}" class="img-max100" />
-            </div>
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
-
-
 <div class="p-3">
   <div class="container mt-2">
     <div class="row text-center">
       <div class="col-12 mx-auto">
-          <div class="p-3 learn-top-green-light sv-br-20">
+          <div class="p-4 learn-top-green-light sv-br-20 shadow">
             <div class="container">
               <div class="row align-items-center p-3">
-                <div class="col-12 mb-3 mb-sm-0">
-                  Utiliza nuestro escáner con tecnología SASVAR en <b>cualquier momento</b> y <b>lugar</b> para separar residuos conscientemente.
+                <div class="col-12 mb-4">
+                  <h3 class="mb-3">Smart Waste Scanner</h3>
+                  <p class="lead">
+                    Use our scanner <b>anytime</b> and <b>anywhere</b> to consciously separate waste.
+                    This tool will help you identify the type of waste and its correct disposal.
+                  </p>
                 </div>
               </div>
               <div class="row">
                 <div class="mx-auto mb-4 d-flex justify-content-center">
-                  <div class="camera">
-                    <video id="video" class="sv-br-20">Video no disponible.</video>
-                    <img id="photo" class="mb-2 sv-br-20" style="display: none;" alt="La foto aparecerá en este espacio." />
+                  <div class="camera shadow-lg">
+                    <video id="video" class="sv-br-20">Video not available.</video>
+                    <img id="photo" class="mb-2 sv-br-20" style="display: none;" alt="The photo will appear in this space." />
                     <canvas id="canvas" style="display: none;"> </canvas>
                     <div class="camera-btn">
                       <img id="startbutton" onclick="takepicture();" src="{% static 'images/scanner/button-takepicture.png' %}" style="max-height: 50px; cursor: pointer" />
-                      <button id="restartbutton" style="display: none;" onclick="restartvideo();" class="btn btn-dark sv-br-20">Retomar foto</button>
+                      <button id="restartbutton" style="display: none;" onclick="restartvideo();" class="btn btn-dark sv-br-20">Retake photo</button>
                       <input type="hidden" id="csrfmiddlewaretoken" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-                      <button id="scanbutton" style="display: none;" onclick="scanpicture('{{ viewData.api_key }}','{{ viewData.ip_server }}')" class="btn btn-dark sv-br-20">Analizar residuo</button>
+                      <button id="scanbutton" style="display: none;" onclick="scanpicture('{{ viewData.api_key }}','{{ viewData.ip_server }}')" class="btn btn-dark sv-br-20">Analyze waste</button>
                     </div>
                     <div id="scanspinner" class="d-flex justify-content-center d-none">
                       <div class="spinner-border mb-4 mt-4" role="status">
-                        <span class="sr-only">Cargando...</span>
+                        <span class="sr-only">Loading...</span>
                       </div>
                     </div>
                   </div>
@@ -68,26 +53,26 @@
 </div>
 
 
-<div id="scanmodal" class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content learn-top-blue sv-br-20">
-      <div class="modal-header"></div>
-      <div class="modal-body">
-        <div class="row align-items-center p-3">
-          <div class="col-6 text-start mb-4 mb-sm-0">
-            <b>Tu residuo es:</b><br /><br />
-            <b id="scanresponse" class="title-level-no-size text-start rc-no-a font-size-main"></b><br /><br />
-            <span class="font-learn13">Este va en la caneca <b id="m-bin"></b>.</span>
-          </div>
-          <div class="col-6">
-            <img src="{% static 'images/scanner/white.png' %}" class="img-max100 img-maxw300 d-none" id="m-img1" />
-            <img src="{% static 'images/scanner/black.png' %}" class="img-max100 img-maxw300 d-none" id="m-img2" />
-            <img src="{% static 'images/scanner/green.png' %}" class="img-max100 img-maxw300 d-none" id="m-img3" />
+<div id="scanmodal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content sv-br-20 shadow">
+      <div class="modal-body p-4">
+        <div class="row align-items-center">
+          <div class="col-12 text-center mb-4">
+            <h4 class="mb-3">Your waste is:</h4>
+            <h2 id="scanresponse" class="title-level-no-size rc-no-a font-size-main mb-3"></h2>
+            <p class="font-learn13 mb-4">This goes in the <b id="m-bin"></b> bin</p>
+            
+            <div class="text-center">
+              <img src="{% static 'images/scanner/white.png' %}" class="img-fluid mx-auto d-none" style="max-width: 200px;" id="m-img1" />
+              <img src="{% static 'images/scanner/black.png' %}" class="img-fluid mx-auto d-none" style="max-width: 200px;" id="m-img2" />
+              <img src="{% static 'images/scanner/green.png' %}" class="img-fluid mx-auto d-none" style="max-width: 200px;" id="m-img3" />
+            </div>
           </div>
         </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" onclick="closemodal()" class="btn btn-secondary sv-br-20" data-dismiss="modal">Cerrar</button>
+      <div class="modal-footer justify-content-center border-0">
+        <button type="button" onclick="closemodal()" class="btn btn-light sv-br-20 px-4 shadow-sm" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
