--- a/home/templates/home/learn/l1.html
+++ b/home/templates/home/learn/l1.html
@@ -41,11 +41,11 @@
         <hr />
         <p><strong>Purpose:</strong> General Waste (sometimes used for landfill waste)</p>
         <ul>
-          <li>Mixed waste that doesn’t fit into other categories</li>
-          <li>Non-recyclable packaging</li>
-          <li>Used tissues and paper towels</li>
-          <li>Certain food packaging (chip bags, candy wrappers)</li>
-          <li>Broken household items (non-recyclable)</li>
+          <li>Mixed waste that doesn’t fit into other categories <strong>(Saves 0 kg CO2 per unit)</strong></li>
+          <li>Non-recyclable packaging <strong>(Saves 0 kg CO2 per unit)</strong></li>
+          <li>Used tissues and paper towels <strong>(Saves 0 kg CO2 per unit)</strong></li>
+          <li>Certain food packaging (chip bags, candy wrappers) <strong>(Saves 0 kg CO2 per unit)</strong></li>
+          <li>Broken household items (non-recyclable) <strong>(Saves 0 kg CO2 per unit)</strong></li>
         </ul>
       </div>
       <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-3 text-center">
@@ -55,22 +55,21 @@
   </div>
 </div>
 
-
 <div class="p-3">
   <div class="container">
     <div class="row mt-3">
       <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-3">
-        <b>White bin</b>
+        <b>White Bin</b>
         <hr />
         <p><strong>Purpose:</strong> Specific Plastic Types, Paper, and Cardboard</p>
         <ul>
-          <li>PET bottles (soda, water)</li>
-          <li>HDPE containers (milk jugs, detergent bottles)</li>
-          <li>Newspapers</li>
-          <li>Magazines</li>
-          <li>Office paper</li>
-          <li>Cardboard boxes</li>
-          <li>Paper packaging</li>
+          <li>PET bottles (soda, water) <strong>(Saves 0.0833 kg CO2 per unit)</strong></li>
+          <li>HDPE containers (milk jugs, detergent bottles) <strong>(Saves 0.0833 kg CO2 per unit)</strong></li>
+          <li>Newspapers <strong>(Saves 0.0458 kg CO2 per unit)</strong></li>
+          <li>Magazines <strong>(Saves 0.0458 kg CO2 per unit)</strong></li>
+          <li>Office paper <strong>(Saves 0.0458 kg CO2 per unit)</strong></li>
+          <li>Cardboard boxes <strong>(Saves 0.0458 kg CO2 per unit)</strong></li>
+          <li>Paper packaging <strong>(Saves 0.0458 kg CO2 per unit)</strong></li>
         </ul>
       </div>
       <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-3 text-center">
@@ -80,20 +79,19 @@
   </div>
 </div>
 
-
 <div class="p-3">
   <div class="container">
     <div class="row mt-3">
       <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-3">
-        <b>Green bin</b>
+        <b>Green Bin</b>
         <hr />
         <p><strong>Purpose:</strong> Organic Waste</p>
         <ul>
-          <li>Food scraps (vegetables, fruit peels)</li>
-          <li>Coffee grounds</li>
-          <li>Eggshells</li>
-          <li>Yard waste (leaves, grass clippings)</li>
-          <li>Compostable food packaging</li>
+          <li>Food scraps (vegetables, fruit peels) <strong>(Saves 0.091 kg CO2 per unit)</strong></li>
+          <li>Coffee grounds <strong>(Saves 0.091 kg CO2 per unit)</strong></li>
+          <li>Eggshells <strong>(Saves 0.091 kg CO2 per unit)</strong></li>
+          <li>Yard waste (leaves, grass clippings) <strong>(Saves 0.091 kg CO2 per unit)</strong></li>
+          <li>Compostable food packaging <strong>(Saves 0.091 kg CO2 per unit)</strong></li>
         </ul>
       </div>
       <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-3 text-center">
