--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -4,48 +4,64 @@
 <div class="p-3">
   <div class="container mt-4">
     <div class="row text-center">
-      <div class="col-md-6 col-lg-4 col-xl-4 col-xxl-4 mx-auto">
+      <div class="col-md-6 col-lg-3 col-xl-3 col-xxl-3 mx-auto">
         <a style="text-decoration: none;" href="{% url 'accounts.profile' %}">
           <div class="shadow-lg p-3 mb-5 bg-white rounded">
             <div class="container">
               <div class="row align-items-center">
                 <div class="col-5 col-sm-5 col-md-5">
-                  <img src="{% static 'images/profile.png' %}" height="125px" class="img-max100" alt="c1" />
+                  <img src="{% static 'images/profile.png' %}" height="125px" class="img-max100" alt="Profile" />
                 </div>
                 <div class="col-7 col-sm-7 col-md-7">
-                  <b class="title-categories text-start rc-no-a">Ver mi Perfil</b>
+                  <b class="title-categories text-start rc-no-a">View My Profile</b>
                 </div>
               </div>
             </div>
           </div>
         </a>
       </div>
-      <div class="col-md-6 col-lg-4 col-xl-4 col-xxl-4 mx-auto">
+      <div class="col-md-6 col-lg-3 col-xl-3 col-xxl-3 mx-auto">
         <a style="text-decoration: none;" href="{% url 'accounts.stats' %}">
           <div class="shadow-lg p-3 mb-5 bg-white rounded">
             <div class="container">
               <div class="row align-items-center">
                 <div class="col-5 col-sm-5 col-md-5">
-                  <img src="{% static 'images/stats.png' %}" height="125px" class="img-max100" alt="c1" />
+                  <img src="{% static 'images/stats.png' %}" height="125px" class="img-max100" alt="Stats" />
                 </div>
                 <div class="col-7 col-sm-7 col-md-7">
-                  <b class="title-categories text-start rc-no-a">Ver mis Estadísticas</b>
+                  <b class="title-categories text-start rc-no-a">View My Statistics</b>
                 </div>
               </div>
             </div>
           </div>
         </a>
       </div>
-      <div class="col-md-6 col-lg-4 col-xl-4 col-xxl-4 mx-auto">
+      <div class="col-md-6 col-lg-3 col-xl-3 col-xxl-3 mx-auto">
         <a style="text-decoration: none;" href="{% url 'accounts.rankings' %}">
           <div class="shadow-lg p-3 mb-5 bg-white rounded">
             <div class="container">
               <div class="row align-items-center">
                 <div class="col-5 col-sm-5 col-md-5">
-                  <img src="{% static 'images/badge.png' %}" height="125px" class="img-max100" alt="c1" />
+                  <img src="{% static 'images/badge.png' %}" height="125px" class="img-max100" alt="Rankings" />
                 </div>
                 <div class="col-7 col-sm-7 col-md-7">
-                  <b class="title-categories text-start rc-no-a">Ver las Divisiones</b>
+                  <b class="title-categories text-start rc-no-a">View Divisions</b>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-3 col-xl-3 col-xxl-3 mx-auto">
+        <a style="text-decoration: none;" href="{% url 'accounts.experience' %}">
+          <div class="shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="container">
+              <div class="row align-items-center">
+                <div class="col-5 col-sm-5 col-md-5">
+                  <img src="{% static 'images/exp.png' %}" height="125px" class="img-max100" alt="Experience" />
+                </div>
+                <div class="col-7 col-sm-7 col-md-7">
+                  <b class="title-categories text-start rc-no-a">My Experience</b>
                 </div>
               </div>
             </div>
